fix: css align on firefox

--- a/src/app/@pages/card/list/components/poke-card/poke-card.component.scss
+++ b/src/app/@pages/card/list/components/poke-card/poke-card.component.scss
@@ -34,3 +34,7 @@
     @include mat.elevation(12);
   }
 }
+
+.mat-card-actions {
+  text-align: center;
+}
